# sdl_template

./: CMakeLists.txt
src/: CMakeLists.txt  Window.cc  main.cpp
